Finish layout and functionalities
Finish layout, functionalities and appropiate requests for each page (characters, character and favorites)
Add lazy loading to api images.
Fix tests of each spec file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,15 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "@components/*": ["src/app/components/*"],
+      "@config/*": ["src/app/config/*"],
+      "@interfaces": ["src/app/interfaces/index.ts"],
+      "@pages/*": ["src/app/pages/*"],
+      "@resolvers/*": ["src/app/resolvers/*"],
+      "@services/*": ["src/app/services/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
