Fix bugs, add tests and pipe
Fix bugs on filter
Add service to clean filters
Create pipe to parse episode name
Change favicon and title

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@interfaces": ["src/app/interfaces/index.ts"],
       "@pages/*": ["src/app/pages/*"],
       "@resolvers/*": ["src/app/resolvers/*"],
-      "@services/*": ["src/app/services/*"]
+      "@services/*": ["src/app/services/*"],
+      "@pipes/*": ["src/app/pipes/*"]
     }
   },
   "angularCompilerOptions": {
